--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,9 +1,8 @@
---- 
-layout: default 
 ---
-
-    <div class="card">
-        <div class="col-md-8 offset-md-2 offset-md-right">
+layout: default
+---
+<div class="post-container">
+    <div class="post">
         {{ content }}
-         </div>
     </div>
+</div>
