--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,105 +1,43 @@
---- 
-layout: default 
+---
+layout: default
 ---
 
+{%- if page.title -%}
+<h1 class="page-heading">{{ page.title }}</h1>
+{%- endif -%}
 
-    <div class="row">
+{{ content }}
 
-    <div class="col-lg-8">
+{%- if site.posts.size > 0 -%}
+<ul class="posts">
+	{%- for post in site.posts -%}
+	<li>
+		<h1 id="posts-label">posts</h1>
+	</li>
+	<li>
+		{%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
+		<a class="post-link" href="{{ post.url | relative_url }}">
+			<h2 class="post-title">{{ post.title | escape }}</h2>
+		</a>
+		<div class="post-meta">
+			<ul class="post-categories">
+				{%- for tag in post.categories -%}
+				<li>{{ tag }}</li>
+				{%- endfor -%}
+			</ul>
+			<div class="post-date"><i class="icon-calendar"></i>{{ post.date | date: date_format }}</div>
+		</div>
+		<div class="post">
+			{%- if site.show_excerpts -%}
+			{{ post.excerpt }}
+			{%- endif -%}
+		</div>
+	</li>
+	{%- endfor -%}
+</ul>
 
-        <div class="card">
-            <h1 class="card-title">About Me</h1>
+ <!-- <p class="feed-subscribe"><svg class="svg-icon orange">
+		<use xlink:href="{{ '/assets/minima-social-icons.svg#rss' | relative_url }}"></use>
+	</svg><a href="{{ "/feed.xml" | relative_url }}">Subscribe</a></p> -->
+	{%- endif -%}
 
-            <p> {{ site.author_bio }} </p>
-        </div>
-
-        <div class="card">
-            <h1 class="card-title"> Work Experience</h1>
-
-            <br />
-            <div class="row">
-                <div class="col-md-2">
-                    <img src="/assets/img/work/google.png" class="company-logo" />
-                </div>
-                <div class="col-md-6">
-                    <h4 class="experience-title"> Full Stack Software Engineer</h4>
-                    <h6 class="experience-info">Google ( Jan 2017 - Present )</h6>
-                    <p class="experience-desc"> Worked on various technologies and built products which helps people globally </p>
-
-                </div>
-            </div>
-
-            <br />
-            <div class="row">
-                <div class="col-md-2">
-                    <img src="/assets/img/work/microsoft.png" class="company-logo" />
-                </div>
-                <div class="col-md-6">
-                    <h4 class="experience-title"> Front End Engineer</h4>
-                    <h6 class="experience-info">Microsoft ( Mar 2015 - Dec 2016 )</h6>
-                    <p class="experience-desc"> Worked on various technologies and built products which helps people globally </p>
-
-                </div>
-            </div>
-
-
-        </div>
-
-        <div class="card">
-            <h1 class="card-title"> Latest Projects</h1>
-
-            <br />
-            <div class="row">
-                <div class="col-md-5">
-                    <img src="/assets/img/projects/gamershub.png" class="project-img" />
-                </div>
-                <div class="col-md-5">
-                    <h4 class="project-title"> Gamers Hub </h4>
-                    <p class="project-desc"> A Platform built for Gamers and Game Developers built using NodeJS, VueJS, MongoDB</p>
-                    <a class="project-link" href="https://gamershub.in">https://gamershub.in</a>
-                </div>
-            </div>
-
-            <br />
-            <div class="row">
-                <div class="col-md-5">
-                    <img src="/assets/img/projects/hackify.png" class="project-img" />
-                </div>
-                <div class="col-md-5">
-                    <h4 class="project-title"> Hackify Theme for Atom Editor </h4>
-                    <p class="project-desc"> A dark hacking theme for Atom Editor</p>
-                    <a class="project-link" href="http://atom.io/themes/hackify-ui">Hackify UI</a>
-                </div>
-            </div>
-
-        </div>
-
-    </div>
-    <div class="col-lg-4">
-
-        <div class="card">
-
-            <h6>
-                <i class="fas fa-map-marker-alt"></i> {{ site.author_location }}</h6>
-            <h6>
-                <i class="fas fa-envelope"></i> {{ site.author_email }}</h6>
-            <h6>
-                <i class="fas fa-link"></i> {{ site.author_website_url }} </h6>
-
-        </div>
-
-        <div class="card">
-            <h1> Skills </h1>
-            <p> HTML , CSS , Javascript , PHP, Python, C</p>
-            <p> Adobe XD, Inkscape, Git, Linux </p>
-        </div>
-
-        <div class="card">
-            <h1> Coding Activity </h1>
-
-            {%- include activity.html -%}
-
-        </div>
-
-    </div>
-    </div>
