--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,9 @@
 
 		gtag('config', '{{ site.plainwhite.analytics_id }}');
 	</script>
+	{.% include comments.html %}
 	{%- endif -%}
+
+	
 </body>
 </html>
